--- a/ProgramaP1/.classpath
+++ b/ProgramaP1/.classpath
@@ -2,8 +2,7 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="/Users/JuanCamiloRuiz/Desktop/org.eclipse.paho.client.mqttv3-1.1.0.jar"/>
-	<classpathentry kind="lib" path="/Users/JuanCamiloRuiz/Downloads/gson-2.6.2.jar"/>
-	<classpathentry kind="lib" path="/Users/JuanCamiloRuiz/Downloads/httpclient-4.3-beta1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient-4.3-beta1.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.paho.client.mqttv3-1.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
