--- a/ProgramaP1_New/pom.xml
+++ b/ProgramaP1_New/pom.xml
@@ -57,5 +57,11 @@
             <artifactId>genson</artifactId>
             <version>1.4</version>
         </dependency>
+        <!-- # MQTT Paho Client # -->
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 </project>
