--- a/SistemaSeguridad-master/src/main/webapp/WEB-INF/web.xml
+++ b/SistemaSeguridad-master/src/main/webapp/WEB-INF/web.xml
@@ -37,7 +37,7 @@ THE SOFTWARE.
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.service;co.edu.uniandes.isis2503.nosqljpa.auth</param-value>
+            <param-value>co.edu.uniandes.isis2503.sistemaseguridad.service;co.edu.uniandes.isis2503.sistemaseguridad.auth</param-value>
         </init-param>
         <init-param>
             <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
@@ -47,17 +47,17 @@ THE SOFTWARE.
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.container.ContainerResponseFilter</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.auth.CORSFilter</param-value>
+            <param-value>co.edu.uniandes.isis2503.sistemaseguridad.auth.CORSFilter</param-value>
         </init-param>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.container.ContainerRequestFilter</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.auth.AuthenticationFilter</param-value>
+            <param-value>co.edu.uniandes.isis2503.sistemaseguridad.auth.AuthenticationFilter</param-value>
         </init-param>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>javax.ws.rs.container.ContainerRequestFilter</param-name>
-            <param-value>co.edu.uniandes.isis2503.nosqljpa.auth.AuthorizationFilter</param-value>
+            <param-value>co.edu.uniandes.isis2503.sistemaseguridad.auth.AuthorizationFilter</param-value>
         </init-param>
     </servlet>
 
