--- a/SistemaSeguridad/pom.xml
+++ b/SistemaSeguridad/pom.xml
@@ -31,6 +31,12 @@
     <dependencies>
         <!-- ##### Java Web Support ##### -->
         <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.3.0</version>
+            <type>jar</type>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
