--- a/BridgeMQTTyHTTP/.classpath
+++ b/BridgeMQTTyHTTP/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="lib/httpclient-4.3-beta1.jar"/>
 	<classpathentry kind="lib" path="lib/org.eclipse.paho.client.mqttv3-1.1.0.jar"/>
+	<classpathentry kind="lib" path="lib/bcpkix-jdk15on-1.54.jar"/>
+	<classpathentry kind="lib" path="lib/bcprov-jdk15on-1.55.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
