--- a/SistemaSeguridad/pom.xml
+++ b/SistemaSeguridad/pom.xml
@@ -102,7 +102,18 @@
             <scope>runtime</scope>
             <version>2.26</version>
         </dependency>
-        
+        <dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.54</version>
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on -->
+		<dependency>
+			<groupId>org.bouncycastle</groupId>
+			<artifactId>bcprov-jdk15on</artifactId>
+			<version>1.55</version>
+		</dependency>
         <!-- # MQTT Paho Client # -->
         <dependency>
             <groupId>org.eclipse.paho</groupId>
